# peremenfm

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DefaultDataCallback.h  DefaultErrorCallback.h  LatencyTuningCallback.cpp  LatencyTuningCallback.h  OboeEngine.cpp  OboeEngine.h  SoundGenerator.cpp  SoundGenerator.h  jni_bridge.cpp  logging_macros.h  utils.h
app/src/main/java/fm/peremen/android/: LocationPermissionExplanationDialog.kt  MainActivity.kt  MainViewModel.kt  PeremenApplication.kt  PeremenManager.kt  PeremenService.kt  PlaybackEngine.java
app/src/main/java/fm/peremen/android/timeengine/: AccuracyTimeSource.kt  AndroidSntpClient.kt  GpsTimeSource.kt  NtpTimeSource.kt  PeremenTimeSource.kt  TimeData.kt  TimeEngine.kt  TimeOffsetStorage.kt
app/src/main/java/fm/peremen/android/utils/: ContextExtensions.kt  Converter.kt  Downloader.kt  MediaPLayerExtensions.kt  PeremenManagerExtensions.kt  Player.kt  Requester.kt  SharedPreferencesExtensions.kt  WithCancellableContext.kt
app/src/main/res/layout/: activity_main.xml  dialog_info.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
